feat(console): impl add & remove virtual-host button

--- a/gravitee-apim-console-webui/src/management/api/proxy/entrypoints/virtual-host/api-proxy-entrypoints-virtual-host.component.scss
+++ b/gravitee-apim-console-webui/src/management/api/proxy/entrypoints/virtual-host/api-proxy-entrypoints-virtual-host.component.scss
@@ -1,12 +1,23 @@
-.virtual-host__table {
-  .mat-column-host,
-  .mat-column-path,
-  .mat-column-override_entrypoint {
-    padding: 4px 8px 40px 8px;
+.virtual-host {
+  &__header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-bottom: 24px;
   }
 
-  &__path-field,
-  &__host-field {
-    width: 100%;
+  &__table {
+    .mat-row {
+      .mat-column-host,
+      .mat-column-path,
+      .mat-column-override_entrypoint {
+        padding: 8px 8px 40px 8px;
+      }
+    }
+
+    &__path-field,
+    &__host-field {
+      width: 100%;
+    }
   }
 }
