--- a/gravitee-apim-console-webui/src/management/api/proxy/entrypoints/virtual-host/api-proxy-entrypoints-virtual-host.component.html
+++ b/gravitee-apim-console-webui/src/management/api/proxy/entrypoints/virtual-host/api-proxy-entrypoints-virtual-host.component.html
@@ -18,9 +18,17 @@
 
 <form *ngIf="virtualHostsFormArray" [formGroup]="virtualHostsFormArray" autocomplete="off" gioFormFocusInvalid>
   <mat-card>
+    <div class="virtual-host__header">
+      <span>Use virtual-host to define on which entrypoint your API can be reached depending on host. </span>
+
+      <button mat-raised-button type="button" (click)="onAddVirtualHost()" color="primary">
+        <mat-icon svgIcon="gio:plus"></mat-icon> Add virtual-host
+      </button>
+    </div>
+
     <table
       mat-table
-      [dataSource]="virtualHostsFormArray.controls"
+      [dataSource]="virtualHostsTableData"
       class="virtual-host__table"
       id="virtualHostsTable"
       aria-label="Virtual hosts table"
@@ -71,7 +79,11 @@
       <!-- Remove Column -->
       <ng-container matColumnDef="remove">
         <th mat-header-cell *matHeaderCellDef id="remove" width="1%"></th>
-        <td mat-cell *matCellDef="let element">X</td>
+        <td mat-cell *matCellDef="let element; let i = index;">
+          <button (click)="onDeleteVirtualHostClicked(i)" mat-icon-button aria-label="Button to delete a virtual host">
+            <mat-icon svgIcon="gio:trash"></mat-icon>
+          </button>
+        </td>
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="virtualHostsTableDisplayedColumns"></tr>
@@ -79,7 +91,7 @@
 
       <!-- Row shown when there is no data -->
       <tr class="mat-row" *matNoDataRow>
-        <td class="mat-cell" [attr.colspan]="virtualHostsTableDisplayedColumns.length">No audit</td>
+        <td class="mat-cell" [attr.colspan]="virtualHostsTableDisplayedColumns.length">No entrypoints</td>
       </tr>
     </table>
   </mat-card>
