--- a/gravitee-apim-console-webui/src/management/api/proxy/entrypoints/virtual-host/api-proxy-entrypoints-virtual-host.component.html
+++ b/gravitee-apim-console-webui/src/management/api/proxy/entrypoints/virtual-host/api-proxy-entrypoints-virtual-host.component.html
@@ -39,10 +39,28 @@
         <td mat-cell *matCellDef="let element">
           <mat-form-field appearance="fill" class="virtual-host__table__host-field">
             <mat-label>Listening host</mat-label>
-            <input matInput [formControl]="element.controls.host" />
+            <input #hostInput matInput [formControl]="element.controls.host" [matAutocomplete]="hostAuto" />
+
+            <!-- Config Autocomplete to only select domain with input value -->
+            <mat-autocomplete #hostAuto="matAutocomplete">
+              <mat-option
+                *ngFor="let domain of domainRestrictions"
+                [value]="hostInput.value"
+                (click)="element.controls.hostDomain.setValue(domain)"
+              >
+                {{ hostInput.value + '.' + domain }}
+              </mat-option>
+            </mat-autocomplete>
+
+            <span matSuffix
+              ><em>{{ element.controls.hostDomain.value }}</em></span
+            >
+
             <mat-hint>Host which must be set into the HTTP request to access this entrypoint.</mat-hint>
-            <mat-error *ngIf="element.controls.path.hasError('required')">Listening host is required.</mat-error>
-            <mat-error *ngIf="element.controls.path.hasError('pattern')">Listening host is not valid.</mat-error>
+            <mat-error *ngIf="element.controls.host.hasError('required')">Listening host is required.</mat-error>
+            <mat-error *ngIf="element.controls.host.hasError('host')"
+              >Listening host is not valid (must end with one of restriction domain).</mat-error
+            >
           </mat-form-field>
         </td>
       </ng-container>
@@ -79,7 +97,7 @@
       <!-- Remove Column -->
       <ng-container matColumnDef="remove">
         <th mat-header-cell *matHeaderCellDef id="remove" width="1%"></th>
-        <td mat-cell *matCellDef="let element; let i = index;">
+        <td mat-cell *matCellDef="let element; let i = index">
           <button (click)="onDeleteVirtualHostClicked(i)" mat-icon-button aria-label="Button to delete a virtual host">
             <mat-icon svgIcon="gio:trash"></mat-icon>
           </button>
