--- a/gravitee-apim-console-webui/src/management/api/proxy/deployments/api-proxy-deployments.component.scss
+++ b/gravitee-apim-console-webui/src/management/api/proxy/deployments/api-proxy-deployments.component.scss
@@ -3,3 +3,9 @@
 :host {
   @include gio-layout.gio-responsive-content-container;
 }
+
+.deployments-card {
+  &__form-field {
+    width: 100%;
+  }
+}
