--- a/gravitee-apim-console-webui/src/management/api/proxy/response-templates/list/api-proxy-response-templates-list.component.scss
+++ b/gravitee-apim-console-webui/src/management/api/proxy/response-templates/list/api-proxy-response-templates-list.component.scss
@@ -1,10 +1,10 @@
-@use '../../../../scss/gio-layout' as gio-layout;
+@use '../../../../../scss/gio-layout' as gio-layout;
 
 :host {
   @include gio-layout.gio-responsive-content-container;
 }
 
-.response-template {
+.response-templates-list {
   &__header {
     display: flex;
     justify-content: space-between;
