fix: display API version in APIs list
https://gravitee.atlassian.net/browse/APIM-942
https://github.com/gravitee-io/issues/issues/8904

--- a/gravitee-apim-console-webui/src/management/api/list/api-list.component.html
+++ b/gravitee-apim-console-webui/src/management/api/list/api-list.component.html
@@ -46,8 +46,8 @@
     <!-- Display Name Column -->
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef mat-sort-header id="name">Name</th>
-      <td mat-cell *matCellDef="let element" (click)="onEditActionClicked(element)">
-        {{ element.name }}
+      <td mat-cell *matCellDef="let element" (click)="onEditActionClicked(element)" title="{{ element.name }} ({{ element.version }})">
+        {{ element.name }} ({{ element.version }})
       </td>
     </ng-container>
 
