--- a/gravitee-apim-console-webui/src/management/api/list/api-list.component.html
+++ b/gravitee-apim-console-webui/src/management/api/list/api-list.component.html
@@ -47,7 +47,7 @@
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef mat-sort-header id="name">Name</th>
       <td mat-cell *matCellDef="let element" (click)="onEditActionClicked(element)">
-        <a>{{ element.name }}</a>
+        <a title="{{ element.name }} ({{ element.version }})">{{ element.name }} ({{ element.version }})</a>
       </td>
     </ng-container>
 
