--- a/gravitee-apim-console-webui/src/management/api/list/api-list.component.html
+++ b/gravitee-apim-console-webui/src/management/api/list/api-list.component.html
@@ -86,7 +86,7 @@
 
     <!-- Display Context Path Column -->
     <ng-container matColumnDef="contextPath">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header id="contextPath">Context paths</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header id="contextPath">Context Path</th>
       <td mat-cell *matCellDef="let element">
         <a>{{ element.contextPath }}</a>
       </td>
