--- a/gravitee-apim-console-webui/src/management/home/home-api-health-check/home-api-health-check.component.html
+++ b/gravitee-apim-console-webui/src/management/home/home-api-health-check/home-api-health-check.component.html
@@ -22,7 +22,7 @@
 </gio-banner-info>
 
 <mat-card>
-  See APIs status for
+  API health-checks since
   <gio-quick-time-range [formControl]="timeFrameControl" (onRefreshClicked)="onRefreshClicked()"></gio-quick-time-range>
 
   <gio-table-wrapper
@@ -43,7 +43,7 @@
       <!-- Display Name Column -->
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef mat-sort-header id="name">Name</th>
-        <td mat-cell *matCellDef="let element" (click)="onEditActionClicked(element)" title="{{ element.name }} ({{ element.version }})">
+        <td mat-cell *matCellDef="let element" title="{{ element.name }} ({{ element.version }})">
           {{ element.name }} ({{ element.version }})
         </td>
       </ng-container>
@@ -105,23 +105,23 @@
         </td>
       </ng-container>
 
-      <!-- API Status Column -->
-      <ng-container matColumnDef="status">
-        <th mat-header-cell *matHeaderCellDef id="status">API Status</th>
+      <!-- API Availability Column -->
+      <ng-container matColumnDef="availability">
+        <th mat-header-cell *matHeaderCellDef id="availability">API Availability</th>
         <td mat-cell *matCellDef="let element">
-          <div class="chart" *ngIf="element.status$ | async; let status">
-            <ng-container *ngIf="status.type === 'configured'">
+          <div class="chart" *ngIf="element.availability$ | async; let availability">
+            <ng-container *ngIf="availability.type === 'configured'">
               <gio-circular-percentage
                 class="chart__gauge"
                 matTooltip="HealthCheck availability"
-                [score]="status.healthCheckAvailability"
+                [score]="availability.healthCheckAvailability"
               ></gio-circular-percentage>
               <div class="chart__health-availability-timeframe">
-                <health-availability-time-frame [option]="status.healthAvailabilityTimeFrame"></health-availability-time-frame>
+                <health-availability-time-frame [option]="availability.healthAvailabilityTimeFrame"></health-availability-time-frame>
               </div>
             </ng-container>
-            <ng-container *ngIf="status.type === 'no-data'"> No data to display </ng-container>
-            <ng-container *ngIf="status.type === 'not-configured'"> Health-check has not been configured </ng-container>
+            <ng-container *ngIf="availability.type === 'no-data'"> No data to display </ng-container>
+            <ng-container *ngIf="availability.type === 'not-configured'"> Health-check has not been configured </ng-container>
           </div>
         </td>
       </ng-container>
@@ -134,8 +134,8 @@
             <button
               (click)="onViewHealthCheckClicked(element)"
               mat-icon-button
-              aria-label="Button to view API HealthCheck"
-              matTooltip="View API HealthCheck"
+              aria-label="Button to view API Health-check"
+              matTooltip="View API Health-check"
             >
               <mat-icon svgIcon="gio:bar-chart-2"></mat-icon>
             </button>
