--- a/gravitee-apim-console-webui/src/management/home/home-api-health-check/home-api-health-check.component.scss
+++ b/gravitee-apim-console-webui/src/management/home/home-api-health-check/home-api-health-check.component.scss
@@ -1,7 +1,7 @@
 @use 'src/scss/gio-layout' as gio-layout;
 
 :host {
-  @include gio-layout.gio-responsive-margin-container;
+  @include gio-layout.gio-responsive-content-container;
 }
 .time-frame {
   padding-bottom: 0;
@@ -22,15 +22,16 @@
   width: 120px;
   padding-right: 16px;
 }
-.mat-column-status {
-  width: 356px;
-  padding: 2px 16px 2px 0;
+.mat-column-availability {
+  width: 372px;
+  padding: 8px 16px 8px 0;
 
   .chart {
     display: flex;
     &__gauge {
       width: 56px;
       height: 56px;
+      margin-right: 16px;
     }
   }
 }
