--- a/gravitee-apim-console-webui/src/management/api/list/api-list.component.html
+++ b/gravitee-apim-console-webui/src/management/api/list/api-list.component.html
@@ -46,8 +46,8 @@
     <!-- Display Name Column -->
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef mat-sort-header id="name">Name</th>
-      <td mat-cell *matCellDef="let element" (click)="onEditActionClicked(element)" title="{{ element.name }} ({{ element.version }})">
-        {{ element.name }} ({{ element.version }})
+      <td mat-cell *matCellDef="let element" title="{{ element.name }} ({{ element.version }})">
+        <a [uiSref]="'management.apis.detail.ng-redirect'" [uiParams]="{ apiId: element.id }">{{ element.name }} ({{ element.version }})</a>
       </td>
     </ng-container>
 
