--- a/gravitee-apim-console-webui/src/management/application/list/env-application-list.component.html
+++ b/gravitee-apim-console-webui/src/management/application/list/env-application-list.component.html
@@ -63,8 +63,10 @@
     <!-- Display name Column -->
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef mat-sort-header id="name">Name</th>
-      <td mat-cell *matCellDef="let element" (click)="onEditActionClicked(element)">
-        <a>{{ element.name }}</a>
+      <td mat-cell *matCellDef="let element">
+        <a [uiSref]="'management.applications.application.general'" [uiParams]="{ applicationId: element.applicationId }">{{
+          element.name
+        }}</a>
       </td>
     </ng-container>
 
