--- a/gravitee-apim-console-webui/src/management/api/component/plan/1-general-step/plan-edit-general-step.component.html
+++ b/gravitee-apim-console-webui/src/management/api/component/plan/1-general-step/plan-edit-general-step.component.html
@@ -1,13 +1,13 @@
 <!--
 
     Copyright (C) 2015 The Gravitee team (http://gravitee.io)
-    
+
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
-    
+
             http://www.apache.org/licenses/LICENSE-2.0
-    
+
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -34,22 +34,24 @@
     <gio-form-tags-input formControlName="characteristics" [addOnBlur]="true"></gio-form-tags-input>
   </mat-form-field>
 
-  <h2>Conditions</h2>
+  <ng-container *ngIf="api$ | async">
+    <h2>Conditions</h2>
 
-  <gio-banner-info *ngIf="mode === 'edit'">
-    This plan is published, if you change the general conditions please remember to notify you API subscribers
-  </gio-banner-info>
+    <gio-banner-info *ngIf="mode === 'edit'">
+      This plan is published, if you change the general conditions please remember to notify you API subscribers
+    </gio-banner-info>
 
-  <mat-form-field class="generalConditions-field">
-    <mat-label>Page of General Conditions</mat-label>
-    <mat-select formControlName="generalConditions">
-      <ng-container *ngIf="conditionPages$ | async; let conditionPages">
-        <mat-option *ngIf="conditionPages?.length === 0" disabled>No page available</mat-option>
-        <mat-option *ngIf="conditionPages?.length !== 0"></mat-option>
-        <mat-option *ngFor="let page of conditionPages" [value]="page.id">{{ page.name }}</mat-option>
-      </ng-container>
-    </mat-select>
-  </mat-form-field>
+    <mat-form-field class="generalConditions-field">
+      <mat-label>Page of General Conditions</mat-label>
+      <mat-select formControlName="generalConditions">
+        <ng-container *ngIf="conditionPages$ | async; let conditionPages">
+          <mat-option *ngIf="conditionPages?.length === 0" disabled>No page available</mat-option>
+          <mat-option *ngIf="conditionPages?.length !== 0"></mat-option>
+          <mat-option *ngFor="let page of conditionPages" [value]="page.id">{{ page.name }}</mat-option>
+        </ng-container>
+      </mat-select>
+    </mat-form-field>
+  </ng-container>
 
   <ng-container *ngIf="displaySubscriptionsSection">
     <h2>Subscriptions</h2>
@@ -83,16 +85,19 @@
       >
     </mat-form-field>
   </ng-container>
-  <h2>Deployment</h2>
 
-  <mat-form-field>
-    <mat-label>Sharding tags</mat-label>
-    <mat-select formControlName="shardingTags" aria-label="Sharding tags selection" multiple>
-      <mat-option *ngFor="let tag of shardingTags$ | async" [value]="tag.id" [disabled]="tag.disabled"
-        >{{ tag.name }}{{ tag.description ? ' - ' + tag.description : '' }}</mat-option
-      >
-    </mat-select>
-  </mat-form-field>
+  <ng-container *ngIf="api$ | async">
+    <h2>Deployment</h2>
+
+    <mat-form-field>
+      <mat-label>Sharding tags</mat-label>
+      <mat-select formControlName="shardingTags" aria-label="Sharding tags selection" multiple>
+        <mat-option *ngFor="let tag of shardingTags$ | async" [value]="tag.id" [disabled]="tag.disabled"
+          >{{ tag.name }}{{ tag.description ? ' - ' + tag.description : '' }}</mat-option
+        >
+      </mat-select>
+    </mat-form-field>
+  </ng-container>
 
   <h2>Access-Control</h2>
 
